--- a/js-alternative/package.json
+++ b/js-alternative/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.10.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
+  },
+  "volta": {
+    "node": "22.11.0"
   }
 }
